Migrated from css to sass and general corrections

--- a/Site/html/productItem.html
+++ b/Site/html/productItem.html
@@ -43,11 +43,11 @@
     <main class="container main-content">
         <div class="product-container">
             <div class="product-gallery">
-                <img src="../images/producto.jpeg" class="product-main-img" alt="Figura de Acción He-Man">
+                <img src="../images/product.jpeg" class="product-main-img" alt="Figura de Acción He-Man">
                 <div class="product-thumbnails">
-                    <img src="../images/producto.jpeg" alt="Miniatura 1" class="thumbnail-img">
-                    <img src="../images/producto.jpeg" alt="Miniatura 2" class="thumbnail-img">
-                    <img src="../images/producto.jpeg" alt="Miniatura 3" class="thumbnail-img">
+                    <img src="../images/product.jpeg" alt="Miniatura 1" class="thumbnail-img">
+                    <img src="../images/product.jpeg" alt="Miniatura 2" class="thumbnail-img">
+                    <img src="../images/product.jpeg" alt="Miniatura 3" class="thumbnail-img">
                 </div>
             </div>
             
