--- a/Site/html/help.html
+++ b/Site/html/help.html
@@ -4,34 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Esta es la página de ayuda de Robert's Toys Store, donde puedes encontrar soporte al cliente, preguntas frecuentes y detalles de contacto.">
+    <meta name="keywords" content="Ayuda, Help Center, Robert's Toys Store, Soporte, FAQs, Soporte técnico">
+    <meta name="author" content="Robert's Toys Store">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>Help</title>
+    <title>Ayuda</title>
 </head>
 <body>
     <header class="main-header">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid p-0">
-                    <a href="#" class="nav-brand">Mi Tienda</a>
+                    <a href="#" class="nav-brand">Robert's Toys Store</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a href="../index.html" class="nav-link">Home</a>
+                                <a href="../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="cart.html" class="nav-link">Cart</a>
+                                <a href="cart.html" class="nav-link">Carrito</a>
                             </li>
                             <li class="nav-item">
-                                <a href="myAccount.html" class="nav-link">My Account</a>
+                                <a href="myAccount.html" class="nav-link">Mi cuenta</a>
                             </li>
                             <li class="nav-item">
-                                <a href="productItem.html" class="nav-link">Product Detail</a>
+                                <a href="productItem.html" class="nav-link">Producto</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">Help</a>
+                                <a href="#" class="nav-link active">Ayuda</a>
                             </li>
                         </ul>
                     </div>
@@ -46,7 +49,7 @@
         <div class="help-container">
             <div class="help-sidebar">
                 <div class="help-card">
-                    <h3 class="cart-card-title">Need to reach us?</h3>
+                    <h3 class="cart-card-title">Necesita contactarse con nosotros?</h3>
                     <div class="help-links">
                         <a href="#" class="btn btn-outline-danger">Contacto</a>
                         <a href="#" class="btn btn-outline-danger">Soporte</a>
@@ -57,7 +60,7 @@
             
             <div class="help-content">
                 <div class="help-card">
-                    <h2 class="cart-card-title">Customer service data</h2>
+                    <h2 class="cart-card-title">Ayuda al cliente</h2>
                     <div class="help-info">
                         <div class="help-info-item">
                             <h5>Horario de atención:</h5>
@@ -75,7 +78,13 @@
                 <div class="help-card section3">
                     <h4 class="cart-card-title">Preguntas frecuentes</h4>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        <ul class = "info-list">
+                            <li><strong>¿Cómo puedo realizar un pedido?</strong> - Para realizar un pedido, simplemente navega por nuestra tienda, agrega los productos al carrito y sigue las instrucciones de pago.</li>
+                            <li><strong>¿Cuánto tiempo tarda el envío?</strong> - El tiempo de envío varía según tu ubicación, pero generalmente toma entre 3 y 7 días hábiles.</li>
+                            <li><strong>¿Puedo devolver un producto?</strong> - Sí, aceptamos devoluciones dentro de los 30 días posteriores a la compra, siempre que el producto esté en su estado original.</li>
+                            <li><strong>¿Qué métodos de pago aceptan?</strong> - Aceptamos tarjetas de crédito, débito, PayPal y transferencias bancarias.</li>
+                            <li><strong>¿Cómo puedo contactar al servicio al cliente?</strong> - Puedes contactarnos a través de nuestro correo electrónico soporte@mitienda.com o llamando al +1 234 567 890.</li>
+                        </ul>
                     </p>
                 </div>
             </div>
@@ -121,7 +130,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Mi Tienda de Figuras. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Robert's Toys Store. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
