--- a/Site/html/myAccount.html
+++ b/Site/html/myAccount.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Página de Mi Cuenta en Robert's Toys Store. Administra tu información personal, pedidos y direcciones de forma sencilla.">
+    <meta name="keywords" content="figuras de acción, coleccionables, ediciones limitadas, tienda online, novedades">
+    <meta name="author" content="Robert's Toys Store">    
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>My Account</title>
+    <title>Mi cuenta</title>
 </head>
 <body>
     <header class="main-header">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid p-0">
-                    <a href="#" class="nav-brand">Mi Tienda</a>
+                    <a href="#" class="nav-brand">Robert's Toys Store</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a href="../index.html" class="nav-link">Home</a>
+                                <a href="../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="cart.html" class="nav-link">Cart</a>
+                                <a href="cart.html" class="nav-link">Carrito</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">My Account</a>
+                                <a href="#" class="nav-link active">Mi cuenta</a>
                             </li>
                             <li class="nav-item">
-                                <a href="productItem.html" class="nav-link">Product Detail</a>
+                                <a href="productItem.html" class="nav-link">Producto</a>
                             </li>
                             <li class="nav-item">
-                                <a href="help.html" class="nav-link">Help</a>
+                                <a href="help.html" class="nav-link">Ayuda</a>
                             </li>
                         </ul>
                     </div>
@@ -141,7 +144,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Mi Tienda de Figuras. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Robert's Toys Store. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
