--- a/Site/html/productItem.html
+++ b/Site/html/productItem.html
@@ -4,34 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <meta name="description" content="Figura de acción coleccionable de He-Man. Perfecta para coleccionistas y fans de la serie clásica. Compra ahora en Robert's Toys Store.">
+    <meta name="keywords" content="He-Man, figura de acción, coleccionables, juguetes, edición limitada">
+    <meta name="author" content="Robert's Toys Store">
+    <meta name="image" content="../images/product.jpeg">
+    <meta name="image-alt" content="Figura de Acción He-Man">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <title>Product Detail</title>
+    <title>Figura de He-man</title>
 </head>
 <body>
     <header class="main-header">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid p-0">
-                    <a href="#" class="nav-brand">Mi Tienda</a>
+                    <a href="#" class="nav-brand">Robert's Toys Store</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a href="../index.html" class="nav-link">Home</a>
+                                <a href="../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="cart.html" class="nav-link">Cart</a>
+                                <a href="cart.html" class="nav-link">Carrito</a>
                             </li>
                             <li class="nav-item">
-                                <a href="myAccount.html" class="nav-link">My Account</a>
+                                <a href="myAccount.html" class="nav-link">Mi cuenta</a>
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link active">Product Detail</a>
+                                <a href="#" class="nav-link active">Producto</a>
                             </li>
                             <li class="nav-item">
-                                <a href="help.html" class="nav-link">Help</a>
+                                <a href="help.html" class="nav-link">Ayuda</a>
                             </li>
                         </ul>
                     </div>
@@ -117,7 +122,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Mi Tienda de Figuras. Todos los derechos reservados.</p>
+                <p>&copy; 2025 Robert's Toys Store. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
